@@ -30,20 +30,21 @@
 #pragma link C++ class Susy::Lepton+;
 #pragma link C++ class Susy::Electron+;
 #pragma link C++ class Susy::Muon+;
+#pragma link C++ class Susy::Tau+;
+#pragma link C++ class Susy::Photon+;
 #pragma link C++ class Susy::Jet+;
 #pragma link C++ class Susy::Met+;
 #pragma link C++ class Susy::Event+;
-#pragma link C++ class Susy::Photon+;
-#pragma link C++ class Susy::Tau+;
 
 // STL
 #pragma link C++ class std::vector< Susy::Particle >+;
 #pragma link C++ class std::vector< Susy::Lepton >+;
 #pragma link C++ class std::vector< Susy::Electron >+;
 #pragma link C++ class std::vector< Susy::Muon >+;
+#pragma link C++ class std::vector< Susy::Tau >+;
+#pragma link C++ class std::vector< Susy::Photon >+;
 #pragma link C++ class std::vector< Susy::Jet >+;
 #pragma link C++ class std::vector< Susy::Met >+;
-#pragma link C++ class std::vector< Susy::Photon >+;
 
 //Tools //optional to have this here ?
 #pragma link C++ class SusyNtTools+;
